# mvl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASING.md  build.rs  librust_out.rlib  mkdocs.yml  mvl.toml  net_basic.ll  net_main.ll
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: benchmark.yml  ci.yml  release.yml
.mvl/pkg/: tui
.openspec/: README.md  language.md
.openspec/adr/: 0001-eleven-requirements.md  0002-language-contraction.md  0003-compilation-strategy.md  0004-language-size.md  0005-recursive-descent-parser.md  0006-ffi-extern-rust-bridge.md  0007-stdlib-import-model.md  0008-compilation-units-and-linking.md  0009-toolchain-layout.md  0009-xdg-paths-and-source-resolution.md  0010-corpus-test-structure.md  0011-generational-toolchain.md  0012-extended-package-model.md  0013-transpiler-mediated-codegen.md  0014-mutation-testing-execution-model.md  0015-mcdc-coverage-execution-model.md  0016-llvm-memory-runtime.md  0017-linter-hint-severity-explicit-ifc-annotations.md  0018-five-stage-pipeline-passes-module.md  0018-llvm-runtime-c-abi.md  0018-llvm-stdlib-two-path.md  0019-llvm-stdlib-two-path.md  0020-bdd-library-naming-convention.md  0021-primitives-runtime-redesign.md  0022-operator-intrinsic-mapping.md  0023-stdlib-profiles.md  0024-label-transparent-functions.md  0025-function-contracts.md  0026-input-validation-philosophy.md  0031-no-ufcs.md  (+37 more)
benches/: refinement_solver.rs
compiler/: .mvllintrc  Makefile  ast.mvl  call_graph.mvl  calls.mvl  capabilities.mvl  check_stmts.mvl  checker.mvl  const_eval.mvl  context.mvl  contracts.mvl  decls.mvl  effects.mvl  ifc.mvl  ifc_propagation.mvl  infer.mvl  lexer.mvl  lexer_test.mvl  main.mvl  mono.mvl  parser.mvl  parser_test.mvl  refinements.mvl  resolver.mvl  solver.mvl  tir.mvl  tir_lower.mvl  verify_data_race.mvl  verify_errors.mvl  verify_passes.mvl  verify_patterns.mvl  verify_session.mvl  verify_termination.mvl  verify_types.mvl  walk.mvl
docs/: adr  compilation-model.md  features.md  getting-started.md  grammar.ebnf  grammar.md  index.md  introduction.md  language.md  mvl_cheatsheet.md  mvl_rationale.md  principles.md  references.bib  references.md  refinement-performance.md  requirements.md  roadmap.md  stdlib-profiles.md  stdlib.md  style.md
etc/: AGENTS.md  vscode-install.sh
examples/: http_server.mvl  test-all.sh
fuzz/: Cargo.toml
fuzz/corpus/transpile_llvm/: adt_checking_e46362.mvl  args_ab026a.mvl  auth_handler_8142c6.mvl  bitwise_c8c6fc.mvl  capabilities_fc2f00.mvl  for_loop_llvm_03d712.mvl  functions_12b767.mvl  generic_fns_9e2c2d.mvl  immutability_e46cd3.mvl  json_operations_08c90c.mvl  labels_f44dd1.mvl  linked_list_7a9ad7.mvl  println_non_string_first_arg_4edae6.mvl  pure_vs_effectful_270572.mvl  random_operations_bd912a.mvl  refinement_totality_interaction_eea661.mvl  refinements_valid_20276d.mvl  safe_division_0519ea.mvl  struct_fields_llvm_c28a6a.mvl  struct_value_semantics_bdc83b.mvl  structs_4a7d3f.mvl  total_vs_partial_67c526.mvl  while_loop_llvm_2dcc4e.mvl
fuzz/corpus/transpile_rust/: adt_checking_e46362.mvl  basic_types_f454a2.mvl  core_types_demo_d791ca.mvl  declarations_899c6b.mvl  declassification_f55007.mvl  else_if_chain_beeb3b.mvl  enum_match_llvm_5cbdbd.mvl  enum_string_match_llvm_aa9bbf.mvl  exhaustive_match_22611e.mvl  file_io_88968e.mvl  fn_takes_string_llvm_26d809.mvl  functions_12b767.mvl  immutability_e46cd3.mvl  keywords_9b8907.mvl  label_types_736c1c.mvl  lattice_1fe1b6.mvl  literals_f86393.mvl  main_c049df.mvl  ownership_70f3fe.mvl  ownership_effects_interaction_80032d.mvl  propagation_ecbe5c.mvl  refinement_totality_interaction_eea661.mvl  refinements_violations_9ebc3d.mvl  regex_operations_4e5004.mvl  result_propagate_llvm_6de4e1.mvl  statements_26dc08.mvl  string_heap_llvm_4be101.mvl  total_vs_partial_67c526.mvl  unix_4f7508.mvl
fuzz/fuzz_targets/: transpile_diff.rs  transpile_llvm.rs  transpile_rust.rs
fuzz/src/: generator.rs
mvl_memory/: Cargo.toml
mvl_memory/src/: lib.rs
mvl_runtime/: Cargo.toml
mvl_runtime_c/: Cargo.toml
mvl_runtime_c/src/: abi.rs  lib.rs  macros.rs  memory_ops.rs  version.rs
mvl_runtime_c/src/stdlib/: args.rs  crypto.rs  env.rs  io.rs  log.rs  mod.rs  process.rs  random.rs  regex.rs  time.rs
runtime/llvm/: Cargo.toml
runtime/llvm/src/: abi.rs  actors.rs  lib.rs  memory.rs  memory_ops.rs  version.rs
runtime/llvm/src/stdlib/: args.rs  audit.rs  config.rs  crypto.rs  env.rs  io.rs  log.rs  map.rs  mod.rs  net.rs  process.rs  random.rs  regex.rs  set.rs  time.rs
runtime/rust-tokio/: Cargo.toml
runtime/rust-tokio/src/: actors.rs  lib.rs
runtime/wasm/: Cargo.toml
runtime/wasm/src/: lib.rs
src/: cli.rs  lib.rs  main.mvl  main.rs  mvl.rs
std/: actors.mvl  args.mvl  audit.mvl  collections.mvl  config.mvl  core.mvl  crypto.mvl  csv.mvl  db.mvl  effects.mvl  env.mvl  error.mvl  http.mvl  ifc.mvl  io.mvl  json.mvl  lists.mvl  log.mvl  math.mvl  net.mvl  pbt.mvl  primitives.mvl  process.mvl  random.mvl  regex.mvl  runtime.mvl  strings.mvl  testing.mvl  text.mvl  time.mvl  toml.mvl  tui.mvl  yaml.mvl
tests/: COVERAGE.md  assurance.rs  borrow.rs  checker_parity.rs  cli_stdlib_prelude.rs  compile_and_run.rs  corpus_ir_parity.rs  cross_backend.rs  cross_backend_tir.rs  error_messages.rs  error_recovery.rs  fmt_roundtrip.rs  linter_integration.rs  manifest_rationale.rs  meta_commands.rs  module_resolver.rs  negative_corpus.rs  requirements.rs  solver_corpus.rs  stdlib.rs  tir_backend_migration.rs  toolchain.rs  transpiler.rs  type_checker.rs
tools/: Makefile  assurance.py  audit_backend_ast.py  audit_cli_prelude.py  audit_panics.py  audit_test_shadows.py  check_adr.py  check_grammar_coverage.py  harvest-specs.sh  lsp_server.py  mvlr  requirements.txt  validate_keywords.py
tracker/: Makefile  codebase_metrics.py  epic_tracker.py  index.py  phase_progress.py  pyproject.toml  release_timeline.py  serve.py  spec_compliance.py  stdlib_parity.py  test_results.py
tracker/__marimo__/session/: phase_progress.py.json  stdlib_parity.py.json
(+1441 files in other folders)
