[workspace]
members = [".", "runtime/rust", "runtime/rust-tokio", "runtime/llvm"]
exclude = ["fuzz", "tests/spikes/003-gzip/bench"]

[package]
name = "mvl"
version = "0.190.1"
edition = "2021"
description = "MVL — Maximum Verifiable Language compiler"
license = "Apache-2.0"

[features]
# Z3 backend is on by default. Requires Z3 installed.
# macOS homebrew: brew install z3  (paths set via .cargo/config.toml)
# To build without Z3: cargo build --no-default-features
default = ["z3"]
z3 = ["dep:z3"]

[dependencies]
ureq = "2"
tempfile = "3"
z3 = { version = "0.12", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "refinement_solver"
harness = false
