[workspace]

[package]
name = "mvl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.mvl]
path = ".."
default-features = false  # skip LLVM dependency for Phase 1 Rust-transpiler targets

# Each [[bin]] is one fuzz target.

[[bin]]
name = "transpile_rust"
path = "fuzz_targets/transpile_rust.rs"
test = false
doc = false
