[package]
name = "mvl_memory"
version = "0.1.0"
edition = "2021"
description = "MVL memory runtime — heap allocation and reference counting for String, Array, Map"
license = "Apache-2.0"

# cdylib: loaded by lli at runtime via --load=libmvl_memory.{dylib,so}
# rlib: allows Rust tests to call the functions directly with cargo test
[lib]
name = "mvl_memory"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
