[package]
name = "mvl_runtime_wasm"
version = "0.1.2"
edition = "2021"
description = "MVL runtime for the WASM backend — Rust source compiled to wasm32-wasip1, loaded by wasmtime via --preload (#1819)"
license = "Apache-2.0"

# cdylib: produces a `.wasm` module that wasmtime can preload alongside
# the emitter's output, resolving `(import "runtime" ...)` declarations.
[lib]
name = "mvl_runtime_wasm"
crate-type = ["cdylib"]

[dependencies]
mvl_runtime_core = { path = "../core" }
